Adding ability to send SMS notifications
